# debian-ganglia

debian/: changelog  control  rules
debian/patches/: fix_graphite_path.patch  gmetad_ipv6_sources_support.patch  gmetad_ipv6_support.patch  gmond_smart_module.patch  rieman_udp_transport.patch  series
gmond/modules/: Makefile.am
gmond/modules/conf.d/: smart.conf
gmond/modules/smart/: Makefile.am  Makefile.in  mod_smart.c
lib/: daemon_init.c
